better less import structure. removed .min files

--- a/assets/css/advanced.css
+++ b/assets/css/advanced.css
@@ -1,14 +1,9 @@
-/* advanced.src.less */
+/* advanced.less */
 /* global.var.less */
-/*
-Responsive.less
-Source: https://github.com/paulmist/responsive.less
-Author: Paul Mist
-Twitter: @paulmist
-*/
+/* responsive.less */
 /* basic.var.less */
 /* advanced.var.less */
-/* global.less */
+/* global.src.less */
 body {
   background-color: #6666ff;
 }
@@ -21,11 +16,11 @@ body {
 #mode-list li.global {
   display: block;
 }
-/* basic.less */
+/* basic.src.less */
 #mode-list li.basic {
   display: block;
 }
-/* advanced.less */
+/* advanced.src.less */
 #mode-list li.advanced {
   display: block;
 }
