--- a/assets/less/advanced.less
+++ b/assets/less/advanced.less
@@ -1,7 +1,9 @@
 /* advanced.less */
 
-#mode-list li {
-	&.advanced {
-		display: block;
-	}
-}
+@import 'global.var';
+@import 'basic.var';
+@import 'advanced.var';
+
+@import 'global.src';
+@import 'basic.src';
+@import 'advanced.src';
