--- a/assets/less/basic.less
+++ b/assets/less/basic.less
@@ -1,7 +1,7 @@
 /* basic.less */
 
-#mode-list li {
-	&.basic {
-		display: block;
-	}
-}
+@import 'global.var';
+@import 'basic.var';
+
+@import 'global.src';
+@import 'basic.src';
