--- a/assets/less/custom.less
+++ b/assets/less/custom.less
@@ -5,12 +5,7 @@
 @import 'advanced.var';
 @import 'custom.var';
 
-@import 'global';
-@import 'basic';
-@import 'advanced';
-
-#mode-list li {
-	&.advanced {
-		display: block;
-	}
-}
+@import 'global.src';
+@import 'basic.src';
+@import 'advanced.src';
+@import 'custom.src';
