--- a/assets/less/libs/responsive.less
+++ b/assets/less/libs/responsive.less
@@ -1,9 +1,9 @@
-/*
-Responsive.less
-Source: https://github.com/paulmist/responsive.less
-Author: Paul Mist
-Twitter: @paulmist
-*/
+/* responsive.less */
+
+// Source: https://github.com/paulmist/responsive.less
+// Author: Paul Mist
+// Twitter: @paulmist
+
 
 //Convert px based width to %
 
