--- a/assets/less/advanced.src.less
+++ b/assets/less/advanced.src.less
@@ -1,9 +1,7 @@
 /* advanced.src.less */
 
-@import 'global.var';
-@import 'basic.var';
-@import 'advanced.var';
-
-@import 'global';
-@import 'basic';
-@import 'advanced';
+#mode-list li {
+	&.advanced {
+		display: block;
+	}
+}
