--- a/assets/less/global.src.less
+++ b/assets/less/global.src.less
@@ -1,5 +1,17 @@
 /* global.src.less */
 
-@import 'global.var';
+body {
+	background-color: lighten(@color, 20%);
+}
 
-@import 'global';
+#mode {
+	content: @mode;
+}
+
+#mode-list li {
+	display: none;
+	
+	&.global {
+		display: block;
+	}
+}
